--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- <script defer src="https://telegram.org/js/telegram-web-app.js"></script> -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
-		<script>
-			// Telegram.WebApp.ready()
-		</script>
+
 		<title>Chizzaro Pizza 🍕</title>
 	</head>
 	<body>
 		<div id="app"></div>
+		<script src="https://telegram.org/js/telegram-web-app.js"></script>
 		<script type="module" src="/src/main.ts"></script>
+		<script>
+			window.Telegram.WebApp.ready()
+		</script>
 	</body>
 </html>
